hphp/hack/test/ifc/check/foreach.php.exp
=== IFC analysis results for foreach.php
File "foreach.php", line 27, characters 5-21:
Data with policy `VALUE` appears in context `PUBLIC`. (Typing[4379])
  File "foreach.php", line 9, characters 14-23:
  This may be the data source with policy `VALUE`
  File "foreach.php", line 5, characters 14-21:
  This may be the data sink with policy `PUBLIC`
  File "foreach.php", line 22, characters 3-37:
  Another program point contributing to the illegal flow
  File "foreach.php", line 23, characters 12-16:
  Another program point contributing to the illegal flow
File "foreach.php", line 25, characters 5-19:
Data with policy `KEY` appears in context `PUBLIC`. (Typing[4379])
  File "foreach.php", line 7, characters 14-21:
  This may be the data source with policy `KEY`
  File "foreach.php", line 5, characters 14-21:
  This may be the data sink with policy `PUBLIC`
  File "foreach.php", line 22, characters 3-37:
  Another program point contributing to the illegal flow
  File "foreach.php", line 23, characters 12-16:
  Another program point contributing to the illegal flow
File "foreach.php", line 16, characters 5-21:
Data with policy `VALUE` appears in context `PUBLIC`. (Typing[4379])
  File "foreach.php", line 9, characters 14-23:
  This may be the data source with policy `VALUE`
  File "foreach.php", line 5, characters 14-21:
  This may be the data sink with policy `PUBLIC`
  File "foreach.php", line 13, characters 3-24:
  Another program point contributing to the illegal flow
  File "foreach.php", line 14, characters 12-15:
  Another program point contributing to the illegal flow
